tests/analyzer/errors/match_enum.rv
enum Marker {
    cross,
    circle,
    none
}

enum Bar{a}

fn main() {
    var marker: Marker = .cross
    var bar: Bar = .a

    match marker {
        Marker.circle => print "circle"
        Marker.cross => print "cross"
    }

    match marker {
        .circle => print "circle"
        .none => print "none"
    }

    var foo = match marker {
        Bar.a => 65
        .circle => 1
        .cross => 2
        .none => {
            var tmp = 4
            var tmp2 = 6
            break 3
        }
    }

}

